force-app/main/default/objects/Service_History__c/Service_History__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Program History</label>
    <nameField>
        <displayFormat>ProgramHistory-{0000}</displayFormat>
        <label>Program History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>