force-app/main/default/objects/Service_History__c/fields/Case_Record_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Created_Date__c</fullName>
    <label>Case Record Created Date</label>
    <type>Date</type>
</CustomField>