force-app/main/default/objects/Service_History__c/fields/Case_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_History</relationshipName>
    <type>Lookup</type>
</CustomField>