force-app/main/default/objects/Service_History__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Service_History</relationshipName>
    <type>Lookup</type>
</CustomField>