force-app/main/default/objects/Service_History__c/fields/ECM_Sharing__c.field-meta.xml
<CustomField>
    <fullName>ECM_Sharing__c</fullName>
    <inlineHelpText>ECM v1 field set by workflow and used by criteria based sharing.</inlineHelpText>
    <label>ECM Sharing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>